# citi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  README_RaspberryPi_citi.md  deny.toml  dev-requirements.txt  setup.cfg  setup.py
.github/workflows/: bench.yml  ci.yml  license.yml  lint.yml  pyci.yml  pylint.yml
benches/: lib.rs  read.rs  write.rs
ffi/cpp/include/citi/: citi.hpp
ffi/cpp/src/: CMakeLists.txt  citi.cpp  citi_c_interface.h
ffi/cpp/tests/: CMakeLists.txt  test_default_record.cpp  test_read_data_record.cpp  test_write_record.cpp
ffi/python/citi/: __init__.py  record.py
ffi/python/tests/: test_cannot_find_file.py  test_default_record.py  test_error_codes.py  test_read_data_record.py  test_read_display_memory_record.py  test_read_list_cal_set_record.py  test_read_wvi_record.py  test_record_setters.py  test_version.py
src/: IOExample.md  constants.rs  ffi.rs  io.rs  lib.rs  macros.rs
src/io/: cti.rs
tests/: cti_regression_tests.rs  regression_tests.rs
tests/cti_regression_files/: .gitattributes  list_cal_set.cti  wvi_file.cti
tests/regression_files/: data_file.cti  display_memory.cti  display_memory_output.cti
