[package]
name = "citi"
version = "0.1.0"
authors = ["Wave View Imaging"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
regex = "1.4.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"

[dev-dependencies]
approx = "0.4.0"
tempfile = "3.2.0"
rand = "0.8.3"
criterion = "0.3.4"

[[bench]]
name = "citi_benchmark"
harness = false
path = "benches/lib.rs"
