[package]
name = "citi"
version = "0.3.0"
authors = ["developer@waveviewimaging.com"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Read and write CITI files"
repository = "https://github.com/Wave-View-Imaging/citi"
readme = "src/IOExample.md"

[dependencies]
regex = "1.4.5"
lazy_static = "1.4.0"
thiserror = "1.0.24"
num-complex = "0.4.0"
libc = "0.2.98"

[dev-dependencies]
approx = "0.4.0"
tempfile = "3.2.0"
rand = "0.8.3"
criterion = "0.3.4"

[lib]
name = "citi"
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[[bench]]
name = "citi_benchmark"
harness = false
path = "benches/lib.rs"
