[metadata]
name = citi
author = Wave View Imaging, Inc.
author-email = developer@waveviewimaging.com
summary = CITI file IO
description-content-type = text/x-rst; charset=UTF-8
home-page = https://www.waveviewimaging.com/
project_urls =
    Source Code = https://github.com/Wave-View-Imaging/citi/
classifier =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
keywords =
    signals
    radio
